5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1649_2443.log
== TEST (2019-04-15 21:54:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=float(input("Digite o raio(R):"))
x=float(input("Digite a altura(X):"))
opcao=int(input("Digite a opcao(1/2):"))
v1=pi*x**2*(3*r-x)/3
v2=(4*pi*r**3/3)-(op1)
if(opcao==v1):
	print(round(v1,4))
else:
	print(round(v2,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    v1=pi*x**2*(3*r-x)/3
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:07:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=float(input("Digite o raio(R):"))
x=float(input("Digite a altura(X):"))
opcao=int(input("Digite a opcao(1/2):"))
var=(pi*(x**2)*(3*r-x)/3)
vesf=(4*pi*r**3/3)
vcomb=(var-vesf)
if(opcao==1):
	print(round(var,4))
if(opcao==2):
	print(round(vcomb,4))
-- EXECUTION TIME:
0.151632
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2443/main.py", line 7, in <module>
    var=(pi*(x**2)*(3*r-x)/3)
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:07:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=float(input("Digite o raio(R):"))
x=float(input("Digite a altura(X):"))
opcao=int(input("Digite a opcao(1/2):"))
var=(pi*(x**2)*(3*r-x)/3)
vesf=(4*pi*r**3/3)
vcomb=(var-vesf)
if(opcao==1):
	print(round(var,4))
if(opcao==2):
	print(round(vcomb,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    var=(pi*(x**2)*(3*r-x)/3)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:08:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=float(input("Digite o raio(R):"))
x=float(input("Digite a altura(X):"))
opcao=int(input("Digite a opcao(1/2):"))
var=(pi*(x**2)*(3*r-x)/3)
vesf=(4*pi*(r**3)/3)
vcomb=(var-vesf)
if(opcao==1):
	print(round(var,4))
if(opcao==2):
	print(round(vcomb,4))
-- EXECUTION TIME:
0.186101
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2443/main.py", line 7, in <module>
    var=(pi*(x**2)*(3*r-x)/3)
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:15:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("Digite o raio(R):"))
x=float(input("Digite a altura(X):"))
opcao=int(input("Digite a opcao(1/2):"))
var=(pi*(x**2)*(3*r-x)/3)
vesf=(4*pi*r**3/3)
vcomb=(vesf-var)
if(opcao==1):
	print(round(var,4))
if(opcao==2):
	print(round(vcomb,4))
	
-- EXECUTION TIME:
0.163689
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
